k8s/postgresql/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
          - tunnel
          - --config
          - /etc/cloudflared/config.yaml
          - --protocol
          - http2
          - run
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared

      volumes:
      - name: config
        configMap:
          name: cloudflared-config
